--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -3,18 +3,21 @@
 
 _questions for abstract style: voice (passive vs active, 'we' vs 'this paper'), tense (present vs past)..._
 
-Two global datasets of species distribution maps - AquaMaps and the International Union for Conservation of Nature - dominate our understanding of marine species ranges throughout the world's oceans, and inform a wide range of biodiversity and conservation purposes.  Differences in methodology and intent between these two datasets drive differences in predicted species ranges, with significant implications for management and conservation decisions. 
+Two global datasets of species distribution maps - AquaMaps and the International Union for Conservation of Nature - dominate our understanding of marine species ranges throughout the world's oceans, and inform a wide range of biodiversity and conservation purposes.  This paper examines differences in predicted species ranges between the two datasets, proposes mechanistic causes and potential solutions for such differences, and explores the implications of these differences for management and conservation decisions.
 
 <!--
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.
 
 Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Inaccurate indications of presence or absence could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
 -->
-Together, the two datasets provide range information for XXX species, with only `r nrow(spp_map_pairs)` species common to both datasets.  ___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  
+Together, the two datasets provide range information for `r nrow(spp_all)` unique species, with only `r nrow(spp_map_pairs)` species common to both datasets.  When selecting one dataset over the other, spatial and taxonomic coverage should be considered against the scope of the project.
+<!--
+___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  Is this just tangential to the real storyline?  I think the taxonomic differences are important considerations when exploring the implications for OHI and MPA gap analysis
+-->
 
-For the subset of species included in both datasets, we examine the alignment of range maps by comparing distribution and extent of predicted ranges.  Categorizing the results based on quality of alignment, we identify several issues that commonly lead to disagreement in species range predictions.  Notably, IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  ___something about recommendations here? how this understanding can lead to better use of these datasets?___
+To understand mechanistic reasons for differences in species range predictions, we compare the distribution and extent of the pair of predicted ranges for the subset of species included in both datasets.  Categorizing the results based on how well each pair of species maps aligns, we identify several issues that commonly lead to misalignment in species range predictions.  Notably, IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  Understanding these issues points toward solutions for providers and users of these datasets.
 
-To understand the implications of these differences, we reexamined two recent global analyses that depend on these datasets: the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas.  Variations in which dataset is used, and how, lead to significantly different estimates of species diversity and conservation effectiveness.
+We reexamine two recent global analyses that depend on these datasets: the Ocean Health Index biodiversity goal and a global analysis of gaps in coverage of marine protected areas.  Variations in which dataset is used, and how, lead to significantly different estimates of species diversity and conservation effectiveness.
 
 -----
 
