--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -4,55 +4,26 @@ output: html_document
 
 # Introduction
 
-_Peer beneath the waves anywhere in the world - a moody kelp forest, a bustling coral reefscape, the frigid depths beneath a polar ice sheet, the endless blue of the open ocean.  Which species would you expect to encounter, and which species would be woefully out of place?_ Mapping and predicting species distributions is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  Knowing where individuals of a species exist, and where they thrive, provides foundational information for 
+_Peer beneath the waves anywhere in the world - a moody kelp forest, a bustling coral reefscape, the frigid depths beneath a polar ice sheet, the endless blue of the open ocean - and you will find a unique ecosystem defined as much by which species are absent as by which species are present._ Knowing where individuals of a species exist, and where they thrive, is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  This knowledge provides foundational information for 
  understanding species ranges and diversity,
  predicting species responses to human impacts and climate change,
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. <!--In the oceans there are now two such global repositories--> Two important repositories _predict_ marine species ranges throughout the world's oceans – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). 
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories _predict_ marine species ranges throughout the world's oceans – AquaMaps modeled species distribution maps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) species range maps (REF).  These two spatial datasets are used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, Selig et al. 2013), evaluating global biodiversity patterns (Coll et al. 2010, Martin et al. 2014), predicting range shifts (Molinos et al. 2015), and setting conservation priorities (Klein et al. 2015). 
 
-The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.
+The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans.(Rondinini et al. 2006) (Jetz 2008?)
 
-Importantly, biases in taxonomic or spatial coverage within a dataset could shift management or conservation actions away from places or species that are most in need.(maybe Jetz 2008?)  Inaccurate indications of presence or absence could lead to inefficient or ineffective marine reserve systems and management plans. (Rondinini et al. 2006) (Jetz 2008?)
-
-To understand the implications of differences between these two datasets, we compared how each data set represents the global spatial and taxonomic distribution of species.  For the relatively small number of species mapped in both datasets, we examined how well the species maps align. We then subjected two recent marine biodiversity studies - the Ocean Health Index biodiversity goal (Halpern et al. 2012) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis, substituting one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity.
+To understand the implications of differences between these two datasets, we compared how each data set represents the global spatial and taxonomic distribution of species.  For the relatively small number of species mapped in both datasets, we examined how well the species maps align and determined several issues that lead to misalignment between predicted species distributions. We then subjected two recent marine biodiversity studies - the Ocean Health Index biodiversity goal (Halpern et al. 2012) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis, substituting one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity.
 
 -----
 
-# Overview of AquaMaps and IUCN datasets  
-
-<!--
-___We may need to shorten this section to fit this paper into the format guidelines for PNAS.  If so, some of this can be pushed to the Suppl. Materials. - BH___
--->
-
-The IUCN publishes species range maps as spatial vector polygon shapefiles, bundled by taxonomic groups.  Using GIS, experts outline spatial polygons to represent a given species' extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  _IUCN releases a range map bundle for a taxonomic group once it has been "comprehensively assessed," i.e. at least 90% of the species within the taxonomic group have been evaluated (REF)._  While this mitigates sampling bias within taxa, it also means that entire taxonomic groups remain unavailable until they have met this threshold of comprehensive assessment.  
-
-AquaMaps develops species distribution maps based on modeled relative environmental suitability.  For each mapped species, environmental preferences (e.g. temperature, depth, salinity) are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.
-
-IUCN range maps are intended to include all possible regions in which a species may be present, with the caveat that this does not imply the species is evenly distributed everywhere within the boundaries of the map(REF).  AquaMaps modeled distribution maps provide a more nuanced prediction of species presence within the extent of occurrence, but the model may not capture all the complexities that drive species distribution (REF).  Due to these differences in methodology and intent, IUCN range maps are more likely to overpredict species presence (and underpredict absence) while AquaMaps modeled distribution maps are relatively more likely to underpredict species presence.(REF and REF)
-
-<!--
-* _How does AquaMaps select species?  based on data available from OBIS/GBIF and Fishbase?_
--->
-
------
-
-# Results and Discussion
-
-<!--
-_Analyses [briefly describe the analyses done]_
-
-* _simple taxonomic and global spatial comparison (describe very briefly)_ 
-* _spatial overlap comparison (describe very briefly)_ For the relatively small number of species with maps in both datasets, we examined how well the maps align, and examined the implications of various categories of spatial misalignment.
-* _redo of OHI biodiversity goal (describe briefly what was done previously, and how that was changed for here)_ Using the Ocean Health Index biodiversity goal as one case study, we predicted the impact on OHI Species scores based on alternate decisions regarding how to use the two datasets. 
-* _redo global MPA gap analysis (describe briefly what was done previously, and how that was changed for here)_ 
--->
-
-### Taxonomic distribution between datasets
+## Overview of AquaMaps and IUCN datasets  
 
 ``` {r calc species numbers, echo = FALSE}
 n_spp_am    <- nrow(spp_am)
+n_spp_am_reviewed <- nrow(spp_am %>% filter(reviewed == 1))
+p_spp_am_reviewed <- round(n_spp_am_reviewed/n_spp_am * 100, 1)
 n_spp_am_rl <- nrow(spp_am %>% filter(sciname %in% spp_iucn_marine$sciname))
 p_spp_am_rl <- round(n_spp_am_rl/n_spp_am * 100, 1)
 n_spp_iucn  <- nrow(spp_iucn_maps)
@@ -61,11 +32,27 @@ p_both_am   <- round(n_spp_both/n_spp_am * 100, 1)
 p_both_iucn <- round(n_spp_both/n_spp_iucn * 100, 1)
 ```
 
-Each dataset offers spatial distribution information for large numbers of species (`r n_spp_am` AquaMaps-mapped species; `r n_spp_iucn` IUCN-mapped marine species).  However, the datasets vary in terms of taxonomic coverage and regional coverage, with only `r n_spp_both` species included in both datasets (`r p_both_am`% of AquaMaps species; `r p_both_iucn`% of IUCN marine species; <a href = 'fig1'>Figure 1a</a>).
+The IUCN publishes species range maps as spatial vector polygon shapefiles, bundled by taxonomic groups.  Using GIS, experts outline spatial polygons to represent a given species' extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  _IUCN releases a range map bundle for a taxonomic group once it has been "comprehensively assessed," i.e. at least 90% of the species within the taxonomic group have been evaluated (REF)._  While this mitigates sampling bias within taxa, it also means that entire taxonomic groups remain unavailable until they have met this threshold of comprehensive assessment.  
 
-The distribution of IUCN-mapped species skews toward tropical latitudes and away from the Atlantic and Eastern Pacific compared to the distribution of AquaMaps-mapped species.(<a href = 'fig1'>Figure 1b and 1c</a>)  This skew likely reflects the fact that the IUCN dataset focuses more heavily on coral reef-associated taxa than does the AquaMaps dataset (see <a href = 'fig1'>Figure 1a</a>).
+AquaMaps develops species distribution maps based on modeled relative environmental suitability.  For each mapped species, environmental preferences (e.g. temperature, depth, salinity) are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species.  A subset of the resulting distribution maps (`r n_spp_am_reviewed` of `r n_spp_am` species maps; `r p_spp_am_reviewed`%) have been checked or formally reviewed by experts, to validate and improve the parameters and underlying model.
 
-For spatial assessments of biodiversity, the choice of one dataset over the other is likely to create significantly different results.  For studies confined to a narrow range of taxa or to a narrow spatial scale, one dataset may offer an advantage over the other in the number of mapped species available.  For global scale biodiversity studies, however, the selection of one dataset over the other will entail tradeoffs in spatial coverage, taxonomic breadth, and taxonomic depth._use something from Rondinini here?_
+IUCN range maps are intended to include all possible regions in which a species may be present, with the caveat that this does not imply the species is evenly distributed everywhere within the boundaries of the map(REF).  AquaMaps modeled distribution maps provide a more nuanced prediction of species presence within the extent of occurrence, but the model may not capture all the complexities that drive species distribution (REF).  Due to these differences in methodology and intent, IUCN range maps are more likely to overpredict species presence (and underpredict absence) while AquaMaps modeled distribution maps are relatively more likely to underpredict species presence.(REF and REF)
+
+-----
+
+# Results and Discussion
+
+## Comparing the two datasets
+
+### Taxonomic distribution between datasets
+
+___I wonder if this section is becoming less a part of the "story", maybe this part should go in SOM?___ _- though I think it's pretty important to understand that there is a huge difference in which species and taxonomic groups are covered in each set.  That also helps to explain why there is such a small overlap, and helps show that the overlapping species are not necessarily representative?  It also provides a logical lead-in from description of the overall datasets to the analysis of just the overlapping portion of the datasets._
+
+Each dataset offers spatial distribution information for large numbers of species (`r n_spp_am` AquaMaps-mapped species; `r n_spp_iucn` IUCN-mapped marine species).  However, the datasets vary in terms of taxonomic coverage and regional coverage, with only `r n_spp_both` species included in both datasets (`r p_both_am`% of AquaMaps species; `r p_both_iucn`% of IUCN marine species; <a href = '#fig1'>Figure 1a</a>).
+
+The distribution of IUCN-mapped species skews toward tropical latitudes and away from the Atlantic and Eastern Pacific compared to the distribution of AquaMaps-mapped species.(<a href = '#fig1'>Figure 1b and 1c</a>)  This skew likely reflects the fact that the IUCN dataset focuses more heavily on coral reef-associated taxa than does the AquaMaps dataset (see <a href = '#fig1'>Figure 1a</a>).
+
+For spatial assessments of biodiversity, the choice of one dataset over the other is likely to result in significantly different conclusions.  For studies confined to a narrow range of taxa or to a narrow spatial scale, one dataset may offer an advantage over the other in the number of mapped species available.  For global scale biodiversity studies, however, the selection of one dataset over the other will entail tradeoffs in spatial coverage and taxonomic breadth versus depth._use something from Rondinini here?_
 
 _Small overlap means that using both datasets in conjunction will add a huge number of species without duplicating efforts, if the differences between the two methods can be reconciled appropriately_
 
@@ -75,11 +62,13 @@ _find a reference that describes what makes a "good" dataset for global biodiver
 
 ### Defining spatial alignment between the two datasets
 
-The IUCN and AquaMaps spatial datasets share `r nrow(spp_map_pairs)` species in common.  If we were to examine each of these species' pair of maps side by side, we would hope to see spatial correlation both in the global pattern of species distribution (where on the map) and the extent of species range (how much of the map).
+The IUCN and AquaMaps spatial datasets share `r nrow(spp_map_pairs)` species in common.  Placing each of these species' pair of maps side by side, we would hope to see spatial correlation both in the global pattern of species distribution (where on the map) and the extent of species range (how much of the map).
 
-In `r round(nrow(spp_map_pairs %>% filter(sm_range == 'AM')) / nrow(spp_map_pairs) * 100, 1)`% of cases, the IUCN range map indicated a larger species range than the AquaMaps map.  This finding concurs with the general expectation that geographic range maps such as IUCN are more likely to over-predict presence than predicted distribution models such as AquaMaps, while predicted distribution models are more likely to over-predict absence.(Rondinini et al., 2006) _errors of commission vs errors of omission, essentially type I and type II errors_
+<!-- NOT REALLY PART OF THE STORY? INCLUDE IN SOM?
+In `r round(nrow(spp_map_pairs %>% filter(sm_range == 'AM')) / nrow(spp_map_pairs) * 100, 1)`% of cases, the IUCN range map indicated a larger species range than the AquaMaps map.  This finding concurs with the general expectation that geographic range maps such as IUCN are more likely to over-predict presence and under-predict absence than distribution models such as AquaMaps.(Rondinini et al., 2006) _errors of commission vs errors of omission, essentially type I and type II errors - should I use one of these terms to clarify?_
+-->
 
-Dividing the map-paired species into quadrants based on median values for each dimension, we can examine the _implications_ of four different qualities of alignment. (<a href = 'fig2'>Figure 2a</a>)
+Dividing the map-paired species into quadrants based on median values for each dimension allows us to examine the _implications_ of four different qualities of alignment. (<a href = '#fig2'>Figure 2a</a>)
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -92,23 +81,21 @@ n_q3 <- nrow(spp_list_quads %>% filter(quad == 'q3'))
 n_q4 <- nrow(spp_list_quads %>% filter(quad == 'q4'))
 ```
 
-Examining spatial alignment by taxonomic group (<a href = 'fig2'>Figure 2b</a>), we found that certain taxa were far more likely than others to be spatially well-aligned; in particular, wide-ranging pelagic organisms (50% or more of ocean area) such as marine mammals, tunas, and billfishes were more consistently well-aligned (quadrants 1 and 2) than demersal and reef organisms.  _propose an explanation here?_ 
-
-Quadrant 1 contains species whose map pairs agree in both spatial distribution and the extent of described ranges, as we would expect for well-understood species.  Excellent and valuable, but not particularly interesting.  
+Quadrant 1 highlights species whose map pairs agree in both spatial distribution and the extent of described ranges, as we would expect for well-understood species.  Examining spatial alignment by taxonomic group (<a href = '#fig2'>Figure 2b</a>), we found that certain taxa were far more likely than others to be spatially well-aligned; in particular, wide-ranging pelagic organisms (50% or more of ocean area) such as marine mammals, tunas, and billfishes were more consistently well-aligned than demersal and reef organisms.  _propose an explanation here? basically - these species go pretty much anywhere, so both maps predict most of the ocean, you'll get a good overlap - not really that revolutionary_ 
 
 The extent-misaligned maps contained in quadrant 2 provide a richer set of examples to understand the fundamental differences between the datasets; examining these, we can identify several mechanisms that could cause such extent misalignment.  
 
-For `r n_q2_am_sm` of `r n_q2` species in quadrant 2 (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  For many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  We suspect that many of these extent-misaligned map pairs can be easily explained: most corals and reef-associated organisms prefer shallower waters; seafloor depth is explicitly modeled in AquaMaps, while depth is frequently ignored as a factor in IUCN range maps. (For examples and details, see SOM) 
+For `r n_q2_am_sm` of `r n_q2` species in quadrant 2 (`r round((n_q2_am_sm/n_q2) * 100, 1)`%), the IUCN extent is larger than the AquaMaps extent.  For many of these species, a quick look at the maps (see SOM for examples) shows that the IUCN range hews closely to the AquaMaps range, while adding a significant buffer zone.  Coral species dominate this quadrant (`r n_q2_corals` coral species - `r round(n_q2_corals/n_corals * 100, 1)`% of all corals and `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in quadrant 2).  Most corals and reef-associated organisms prefer shallower waters, and we suspect that many of these extent-misaligned map pairs can be easily explained: seafloor depth is explicitly included in AquaMaps models, while depth is frequently ignored as a factor in IUCN range maps, leading to overprediction of species range into areas too deep to support the species. (For examples and details, see SOM) 
 
-* ___verify some of the coral maps by saving raster, showing raster and polygons in QGIS against a bathymetry layer___
+* ___verify some of the coral maps by saving raster, showing raster and polygons in QGIS against a bathymetry layer___ - put a map for Oculina varicosa (and others?) in the SOM
 * ___include recommendation for IUCN range maps to be clipped to bathymetry where appropriate? or save til end?___ 
 
-The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges are frequently overextended into unsuitable habitat, as in the case of many quadrant 2 species, while at the same time, AquaMaps aggressively extrapolates distribution of presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, giving the impression of extent alignment. ___this quadrant seems to be a false alignment then?___
+The extent-alignment of species maps found in quadrant 3 can in many cases be attributed to "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable habitat, as in the case of many quadrant 2 species, while at the same time, AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence.  This results in an area ratio close to 100%, giving the impression of extent alignment. ___this quadrant seems to be a false alignment then? should there be a stronger warning here___
 
-Quadrant 4 species maps seem to suffer from the same issues as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps _(this is supposed to show that much of this quadrant is based on overextrapolation of AquaMaps)_. Quadrant 4 in particular includes a high proportion of data-poor species in which the environmental envelope model is based on fewer than 10 known cell occurrences, and at the same time includes a smaller number of reviewed species maps than the other quadrants.
+Quadrant 4 species maps suffer from the same issues as those in quadrant 3, but here the AquaMaps extrapolation extends even further, pushing the extent alignment ratio lower.  In this quadrant, AquaMaps predicts a larger extent than IUCN for 70% of species represented in this quadrant, compared with just 30% of species in the entire set of overlapping maps _(this is supposed to show that much of this quadrant is based on overextrapolation of AquaMaps... not sure that's clear yet)_. AquaMaps range maps in quadrant 4 include a high proportion of data-poor species in which the environmental envelope model is based on fewer than 10 known cell occurrences, and at the same time include fewer reviewed species maps than the other quadrants.
 
 
-___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot - should the quadrant plot show data-poor species instead of, say, red-list category?___
+___table to show data poor status and reviewed status for AquaMaps maps represented in the quadrant plot___ _- perhaps update the quadrant plot to reveal data-poor species (and reviewed species? little overlap of reviewed & data-poor) instead of, say, red-list category which doesn't get discussed in the body of the paper?  then this table can go in SOM if we like it_
 
 | quadrant | n species | n data poor species | n reviewed species |
 | :------: | :-------: | :-----------------: | :----------------: |
@@ -121,32 +108,36 @@ ___table to show data poor status and reviewed status for AquaMaps maps represen
 
 _data poor = fewer than 10 points used to generate the environmental envelopes; reviewed = map checked or formally expert-reviewed_
 
-_Other hypotheses/case studies to highlight other possible mechanistic differences?_
+_Other hypotheses/case studies to highlight other possible mechanistic differences?_  I think we found a couple of the big ones; good enough?
 
 
 -----
 
-
-# Implications
-
 ## Application to OHI
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012), an index made up of 10 goals, utilizes both of these datasets to inform the Species subgoal of the Biodiversity goal.  As it is currently calculated, the Species subgoal uses species spatial distribution data and IUCN Red List conservation status to calculate an area-weighted mean species status in each of 221 exclusive economic zones. Spatial distributions were gleaned from both IUCN and AquaMaps datasets, preferring IUCN data for species represented in both data sets.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.  Species with no spatial data in either dataset were excluded, as were species with insufficient information to determine conservation status (including species listed as not evaluated or data deficient).
+The global Ocean Health Index (OHI) (Halpern et al. 2012), a composite index made up of 10 goals, utilizes both of these datasets to inform the Species subgoal of the Biodiversity goal.  As it is currently calculated, the Species subgoal uses species spatial distribution data and IUCN Red List conservation status to calculate an area-weighted mean species status in each of 221 exclusive economic zones. Spatial distributions were gleaned from both IUCN and AquaMaps datasets, preferring IUCN data for species represented in both data sets.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.  Species with no spatial data in either dataset were excluded, as were species with insufficient information to determine conservation status (including species listed as not evaluated or data deficient).
 
 _Briefly summarize results_
 
-Since the Ocean Health Index Species subgoal relies on spatial data from both datasets, the impacts of these threshold and preference changes will be somewhat muted (<a href = 'fig3'>Figure 3</a>).  When IUCN range maps are the preferred data source, only the subset of AquaMaps-only species will be affected by threshold changes; and when AquaMaps is the preferred source, the IUCN-only species will dampen the effect of a threshold change.
+Since the Ocean Health Index Species subgoal relies on spatial data from both datasets, the impacts of these threshold and preference changes will be somewhat muted (<a href = '#fig3'>Figure 3</a>).  When IUCN range maps are the preferred data source, only the subset of AquaMaps-only species will be affected by threshold changes; and when AquaMaps is the preferred source, the IUCN-only species will dampen the effect of a threshold change.
 
 -----  
 
 ## Application to MPA Gap Analysis
 
-do the analysis...:
+Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species, and to identify which species fall through the gaps in protection.  The MPA gap analysis relied on the AquaMaps database available in early 2015, comprising distribution maps for XXX species.  Species presence was defined using a probability threshold of 50% or greater.  The study defined four subsets of protected areas using the World Database of Protected Areas, based upon combinations of IUCN protected area classification, marine designation, and spatial marine coverage.  The study determined that currently defined marine protected areas (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within marine protected areas.
 
-* rerun based on old AquaMaps at 50% (to verify methodology gets a close result to paper), then new AquaMaps for new baseline
-* run with threshold at 0%
+working on the analysis...
+
+* rerun based on old AquaMaps at 50% (to verify methodology gets a close result to paper), then new AquaMaps for updated baseline
+    * consider also: filter on STATUS == 'Designated', and filter out those pesky fishery management areas and manatee speed zones...
+* run with threshold at 0% (not all the same as original paper)
 * run with filtering out data-poor species?
 * run with IUCN maps instead of AquaMaps
+* Which aspects of the analysis should we focus on?:
+    * overall protection, for 4th subset of protected areas? or overall for all subsets? (see paper, table 1)
+    * overall vs broken down by taxonomic groups? (see paper, figure 1)
+    * spatial distribution of gap species (see paper, figure 2)
 
 _Predictions:  What happens when using a 0% threshold instead of a 50%?  What happens when using IUCN rather than AM?  IUCN tends to overestimate extent esp for coastal species?  More species will be included in MPAs so fewer apparent gap species.  Included range area inside MPAs will increase.  Policy implications?_
 
@@ -159,16 +150,18 @@ ___Recommendations on data use?___
 * IUCN mapmakers
     * at least clip polygons to bathymetry for depth-sensitive species, come on now people, it's really pretty obvious.  
     * Note something about how photosynthetic marine species, and the species that depend on them, are far more sensitive to bathymetry than terrestrial species are to altitude... 
-    * Note that this is explicitly mentioned in the [training for IUCN red list marine maps](https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492) - "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species"
+    * Note that this is explicitly mentioned in the [training for IUCN red list marine maps](https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492) 
+        - "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species"
 
 * AquaMaps mapmakers
     * get expert eyeballs on all the maps
+    * revisit the decision to use data-poor species... or at least make it more up-front about the ramifications of including the data-poor species
 
 * Users
     * understand that range maps tend to overestimate presence; AquaMaps are less likely to overestimate presence, but trade off for overestimating absence. Both better than simple point locality data.
     * to use both together:
         * consider setting AM presence threshold to 0% to create an extent of occurrence map, more like IUCN map.
-        * consider additional filters and criteria, e.g. "reviewed" and/or "occurcells" to avoid over-extrapolation
+        * consider additional filters and criteria, e.g. `reviewed` and/or `occurcells` to avoid over-extrapolation problem
         * consider clipping IUCN ranges to bathymetry for depth-limited species or taxa
         * or consider de-weighting IUCN for area-weighted calcs, for taxa in which IUCN is consistently overestimating presence
         
