a few little tweaks to wording, and incorporated a few more of Julie's comments

--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -15,7 +15,7 @@ Together, the two datasets provide range information for `r nrow(spp_all)` uniqu
 ___what is the key takeaway for the taxonomic and spatial coverage analyses? can we say something about benefits of combining the two for better taxo coverage?___  Is this just tangential to the real storyline?  I think the taxonomic differences are important considerations when exploring the implications for OHI and MPA gap analysis
 -->
 
-To understand mechanistic reasons for differences in species range predictions, we compare the distribution and extent of the pair of predicted ranges for the subset of species included in both datasets.  Categorizing the results based on how well each pair of species maps aligns, we identify several issues that commonly lead to misalignment in species range predictions.  Notably, IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  Understanding these issues points toward solutions for providers and users of these datasets.
+For the subset of species included in both datasets, we compare the distribution and extent of the pair of predicted ranges and identify several issues that commonly lead to misalignment between the two datasets.  Notably, IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps maps for data-poor species often extrapolate presence far afield from known occurrences.  Understanding these issues points toward solutions for providers and users of these datasets.
 
 We reexamine two recent global analyses that depend on these datasets: the Ocean Health Index biodiversity goal and a global analysis of gaps in coverage of marine protected areas.  Variations in which dataset is used, and how, lead to significantly different estimates of species diversity and conservation effectiveness.
 
